# tensor-md

./: .env.example  .gitignore  LICENSE  README.md  REPRODUCIBILITY.md  environment.yml  publish.sh  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
examples/: general_pipeline_diagnostics.ipynb  mvtec_bottle_pipeline.ipynb
scripts/: release.py
tensor_md/: Data_Loading.py  __init__.py  diagnostics.py  loader_debugger.py  location_aware_tensor_mahalanobis_detector.py  patch_estimators.py  tensor_fusion.py  vectorized_mahalanobis_detector.py
tensor_md.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_tensor_md.py
