[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensor-md"
version = "0.1.2"
description = "Location-aware tensor Mahalanobis anomaly detection"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Greinald Pappa"}]
keywords = ["anomaly detection", "tensor data", "Mahalanobis distance", "MVTec"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.26,<3",
  "scipy>=1.11,<2",
  "scikit-learn>=1.4,<1.8",
  "Pillow>=10,<12",
]

[project.optional-dependencies]
evaluation = ["tifffile>=2023.7", "tqdm>=4.66,<5", "tabulate>=0.9,<1"]
cnn = ["torch>=2.3,<2.9", "torchvision>=0.18,<0.24", "tensorflow>=2.16,<2.19"]
notebooks = ["jupyterlab>=4,<5", "ipykernel>=6.25,<7", "matplotlib>=3.8,<4", "plotly>=5.18,<7", "pandas>=2.1,<3", "seaborn>=0.13,<1"]
test = ["pytest>=8,<9"]

[tool.setuptools]
packages = ["tensor_md"]
package-dir = {tensor_md = "tensor_md"}

[project.urls]
Repository = "https://github.com/greinald/tensor-md"
Documentation = "https://github.com/greinald/tensor-md#readme"
